refactor: java 8 code compatibility